@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160918"
-#define public MagickPackageReleaseDate "snapshot-20160918"
+#define public MagickPackageVersionAddendum ".020160923"
+#define public MagickPackageReleaseDate "snapshot-20160923"
