@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x181501
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 18,15,1
-#define MagickChangeDate   "20160918"
-#define MagickReleaseDate  "snapshot-20160918"
+#define MagickChangeDate   "20160923"
+#define MagickReleaseDate  "snapshot-20160923"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
