@@ -1,3 +1,9 @@
+2016-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/rle.c (ReadRLEImage): Only report an invalid colormap
+	index once.  Fixes slowness problem with corrupt file provided via
+	email by Agostino Sarubbo on September 15, 2016.
+
 2016-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* www/thanks.rst: Added a 'thanks' page.
